@@ -12,6 +12,7 @@
 - iOS: Update to MobiVM 2.3.15
 - Update to LWJGL 3.3.1
 - API Addition: ObjLoader now supports ambientColor, ambientTexture, transparencyTexture, specularTexture and shininessTexture
+- API Addition: ObjLoader now supports color by vertex
 - API Addition: PointSpriteParticleBatch blending is now configurable.
 - TOOLS Features: Blending mode and sort mode can be changed in Flame particle 3D editor.
 - API Addition: Polygon methods setVertex, getVertex, getVertexCount, getCentroid.
